Fix playlist z-index

--- a/src/Components/Player/Playlist.css
+++ b/src/Components/Player/Playlist.css
@@ -7,9 +7,9 @@
 
 .playlist {
     position: relative;
-    top: 22px;
+    top: 21px;
     box-sizing: border-box;
-    z-index: 1;
+    z-index: 2;
 }
 
 .playlist-wrapper {
